--- a/ios/ReactNativeExample/Info.plist
+++ b/ios/ReactNativeExample/Info.plist
@@ -2,22 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>The app requires access to Photos to save media to it.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>The app requires access to Photos to save media to it.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Use microphone to record AR</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Use GPS for AR</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Use camera for AR</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>ReactNativeExample</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -45,8 +37,18 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Use camera for AR</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Use GPS for AR</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Use GPS for AR</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Use microphone to record AR</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>The app requires access to Photos to save media to it.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>The app requires access to Photos to save media to it.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -56,8 +58,13 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
