--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,4 @@
+require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -5,15 +6,17 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, 13.0
+platform :ios, 13.4
 prepare_react_native_project!
 
 flipper_config = FlipperConfiguration.disabled
 
 use_modular_headers!
-use_frameworks!
+use_frameworks! :linkage => :static
+$RNFirebaseAsStaticFramework = true
 
 target 'ReactNativeExample' do
+  use_expo_modules!
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -39,6 +42,11 @@ target 'ReactNativeExample' do
   end
 
   post_install do |installer|
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
