--- a/package.json
+++ b/package.json
@@ -11,9 +11,102 @@
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
+    "@kichiyaki/react-native-barcode-generator": "^0.6.7",
+    "@likashefqet/react-native-image-zoom": "^2.2.0",
+    "@notifee/react-native": "7.7.1",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-firebase/analytics": "^19.0.1",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/auth": "^19.0.1",
+    "@react-native-firebase/crashlytics": "^19.0.1",
+    "@react-native-firebase/messaging": "^19.0.1",
+    "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@stomp/stompjs": "^7.0.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "0.24.0",
+    "axios-curlirize": "^2.0.0",
+    "axios-extensions": "^3.1.7",
+    "dayjs": "^1.11.10",
+    "expo": "49.0.0",
+    "formik": "^2.4.5",
+    "fuse.js": "^7.0.0",
+    "geolib": "^3.3.4",
+    "i18next": "^23.10.1",
+    "lodash": "^4.17.21",
+    "qs": "^6.12.0",
     "react": "18.2.0",
+    "react-i18next": "^14.1.0",
     "react-native": "0.72.6",
-    "tar-sdk": "^1.0.0"
+    "react-native-animatable": "^1.4.0",
+    "react-native-auto-height-image": "^3.2.4",
+    "react-native-autoheight-webview": "^1.6.5",
+    "react-native-avoid-softinput": "2.4.8",
+    "react-native-bluetooth-escpos-printer": "github:januslo/react-native-bluetooth-escpos-printer.git",
+    "react-native-calendars": "^1.1304.1",
+    "react-native-camera": "^4.2.1",
+    "react-native-charts-wrapper": "^0.6.0",
+    "react-native-code-push": "^8.2.1",
+    "react-native-color-picker-ios": "^0.1.2",
+    "react-native-dashed-line": "^1.1.0",
+    "react-native-date-picker": "^4.4.2",
+    "react-native-device-info": "^10.13.1",
+    "react-native-fbsdk-next": "^12.1.4",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-head-tab-view": "^4.0.0-rc.13",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modalbox": "github:maxs15/react-native-modalbox.git#e9cd9a0",
+    "react-native-pager-view": "6.2.3",
+    "react-native-parsed-text": "^0.0.22",
+    "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-permissions": "^4.1.4",
+    "react-native-ping": "^1.2.8",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-scrollable-tab-view": "github:ptomasroos/react-native-scrollable-tab-view.git",
+    "react-native-scrollable-tab-view-collapsible-header": "^2.0.1",
+    "react-native-sound-player": "^0.13.2",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "15.1.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-thermal-receipt-printer-image-qr": "^0.1.11",
+    "react-native-timeline-flatlist": "^0.8.0",
+    "react-native-userpic": "^2.0.3",
+    "react-native-view-shot": "^3.8.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
+    "react-native-webview": "^13.8.1",
+    "react-redux": "^9.1.0",
+    "react-use": "^17.5.0",
+    "reanimated-color-picker": "^3.0.3",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
+    "sockjs-client": "^1.6.1",
+    "tar-sdk": "^1.0.1",
+    "text-encoding-polyfill": "^0.6.7",
+    "toggle-switch-react-native": "^3.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
