--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@expo/react-native-action-sheet": "^4.0.1",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
-    "@likashefqet/react-native-image-zoom": "^2.2.0",
+    "@likashefqet/react-native-image-zoom": "^3.0.0",
     "@notifee/react-native": "7.7.1",
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/netinfo": "^11.3.1",
-    "@react-native-firebase/analytics": "^19.0.1",
-    "@react-native-firebase/app": "^19.0.1",
-    "@react-native-firebase/auth": "^19.0.1",
-    "@react-native-firebase/crashlytics": "^19.0.1",
-    "@react-native-firebase/messaging": "^19.0.1",
+    "@react-native-firebase/analytics": "^19.1.1",
+    "@react-native-firebase/app": "^19.1.1",
+    "@react-native-firebase/auth": "^19.1.1",
+    "@react-native-firebase/crashlytics": "^19.1.1",
+    "@react-native-firebase/messaging": "^19.1.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -57,7 +57,7 @@
     "react-native-code-push": "^8.2.1",
     "react-native-color-picker-ios": "^0.1.2",
     "react-native-dashed-line": "^1.1.0",
-    "react-native-date-picker": "^4.4.2",
+    "react-native-date-picker": "^5.0.0",
     "react-native-device-info": "^10.13.1",
     "react-native-fbsdk-next": "^12.1.4",
     "react-native-file-viewer": "^2.1.5",
@@ -78,12 +78,12 @@
     "react-native-pager-view": "6.2.3",
     "react-native-parsed-text": "^0.0.22",
     "react-native-pell-rich-editor": "^1.9.0",
-    "react-native-permissions": "^4.1.4",
+    "react-native-permissions": "^4.1.5",
     "react-native-ping": "^1.2.8",
     "react-native-reanimated": "^3.8.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-screens": "^3.30.1",
     "react-native-scrollable-tab-view": "github:ptomasroos/react-native-scrollable-tab-view.git",
     "react-native-scrollable-tab-view-collapsible-header": "^2.0.1",
     "react-native-sound-player": "^0.13.2",
@@ -103,7 +103,7 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
     "sockjs-client": "^1.6.1",
-    "tar-sdk": "^1.0.1",
+    "tar-sdk": "^1.0.2",
     "text-encoding-polyfill": "^0.6.7",
     "toggle-switch-react-native": "^3.3.0",
     "yup": "^1.4.0"
@@ -112,18 +112,18 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@react-native/eslint-config": "^0.75.0-main",
+    "@react-native/metro-config": "^0.75.0-main",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/react": "^18.2.72",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "metro-react-native-babel-preset": "0.77.0",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "5.4.3"
   },
   "engines": {
     "node": ">=16"
